force-app/main/default/objects/ampi__Budget__c/ampi__Budget__c.object-meta.xml
<CustomObject>
    <description>Budget for a project</description>
    <label>Budget</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>