force-app/main/default/objects/ampi__Budget__c/fields/ampi__Actual_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>ampi__Actual_Expenditure__c</fullName>
    <description>This roll-up summary sums the Amount Actual field for all child Financial records where Type is Expenditure.</description>
    <inlineHelpText>This roll-up summary sums the Amount Actual field for all child Financial records where Type is Expenditure.</inlineHelpText>
    <label>Actual Expenditure</label>
    <summarizedField>ampi__Financial__c.ampi__Amount_Actual__c</summarizedField>
    <summaryFilterItems>
        <field>ampi__Financial__c.ampi__Type__c</field>
        <operation>equals</operation>
        <value>Expenditure</value>
    </summaryFilterItems>
    <summaryForeignKey>ampi__Financial__c.ampi__Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>