force-app/main/default/objects/ampi__Budget__c/fields/ampi__Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>ampi__Actual_Revenue__c</fullName>
    <description>This roll-up summary field sums the value of Amount Actual for all child Financial records where Type is Revenue.</description>
    <inlineHelpText>This roll-up summary field sums the value of Amount Actual for all child Financial records where Type is Revenue.</inlineHelpText>
    <label>Actual Revenue</label>
    <summarizedField>ampi__Financial__c.ampi__Amount_Actual__c</summarizedField>
    <summaryFilterItems>
        <field>ampi__Financial__c.ampi__Type__c</field>
        <operation>equals</operation>
        <value>Revenue</value>
    </summaryFilterItems>
    <summaryForeignKey>ampi__Financial__c.ampi__Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>