force-app/main/default/objects/ampi__Budget__c/fields/ampi__Budget_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>ampi__Budget_Version_Number__c</fullName>
    <description>This text field is to specify and track the version of this budget if it has been modified.</description>
    <inlineHelpText>Indicate the version of the budget here</inlineHelpText>
    <label>Budget Version Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>