force-app/main/default/objects/ampi__Budget__c/fields/ampi__Current__c.field-meta.xml
<CustomField>
    <fullName>ampi__Current__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if this budget is current based on the budget version number. There should be only one current budget per project.</description>
    <inlineHelpText>Only check this box for the latest budget version. There should be only one current budget per project.</inlineHelpText>
    <label>Current?</label>
    <type>Checkbox</type>
</CustomField>