force-app/main/default/objects/ampi__Budget__c/fields/ampi__Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description__c</fullName>
    <description>Description field for a project&apos;s budget record</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>