force-app/main/default/objects/ampi__Budget__c/fields/ampi__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__End_Date__c</fullName>
    <description>Date field to specify and track the end date of a budget.</description>
    <inlineHelpText>Indicate the end date here</inlineHelpText>
    <label>End date</label>
    <type>Date</type>
</CustomField>