force-app/main/default/objects/ampi__Budget__c/fields/ampi__Exclude_From_IATI__c.field-meta.xml
<CustomField>
    <fullName>ampi__Exclude_From_IATI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to indicate whether or not this information should be excluded from IATI. If TRUE, the Budget record and all its child records will not be printed into the IATI XMLs.</description>
    <inlineHelpText>Check this box if this information should be excluded from IATI</inlineHelpText>
    <label>Exclude from IATI</label>
    <type>Checkbox</type>
</CustomField>