force-app/main/default/objects/ampi__Budget__c/fields/ampi__Expenditure_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__Expenditure_Status__c</fullName>
    <description>Picklist field to track the progress and status of expenditure against a budget. This field is unrestricted and can be modified by subscribers.</description>
    <label>Expenditure Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>