force-app/main/default/objects/ampi__Budget__c/fields/ampi__IATI_Budget_Revised__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Budget_Revised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if the budget record was modified for IATI reporting purposes.</description>
    <inlineHelpText>Check this box if budget has been revised</inlineHelpText>
    <label>IATI Budget Revised</label>
    <type>Checkbox</type>
</CustomField>