force-app/main/default/objects/ampi__Budget__c/fields/ampi__IATI_Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Budget_Status__c</fullName>
    <description>Picklist field to track the indicative vs committed status of a budget for IATI reporting.</description>
    <label>IATI Budget Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Committed</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Indicative</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>