force-app/main/default/objects/ampi__Budget__c/fields/ampi__IATI_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Type__c</fullName>
    <description>Picklist to specify Budget Type as based on IATI code list. The code list sits in the API Name/value of the picklist value, while the Label is the human-readable name of the Budget Type.</description>
    <label>IATI Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Total Budget</fullName>
            </value>
            <value>
                <fullName>Recipient Org Budget</fullName>
            </value>
            <value>
                <fullName>Total Expenditure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>