force-app/main/default/objects/ampi__Budget__c/fields/ampi__IATI_Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Vocabulary__c</fullName>
    <description>Picklist to select the Budget Identifier Vocabulary for IATI Activity reporting.</description>
    <label>Budget Identifier Vocabulary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Country Chart of Accounts</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Other Country System</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Reporting Organisation</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>