force-app/main/default/objects/ampi__Budget__c/fields/ampi__Locked__c.field-meta.xml
<CustomField>
    <fullName>ampi__Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to lock budgets from modification. This field can be used to build approval processes for the child Financial records.</description>
    <inlineHelpText>Check this box if this budget needs to be locked from further modification.</inlineHelpText>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>