force-app/main/default/objects/ampi__Budget__c/fields/ampi__Percent_of_Budget_Spent__c.field-meta.xml
<CustomField>
    <fullName>ampi__Percent_of_Budget_Spent__c</fullName>
    <description>This formula field is used to track the actual expenditure as a percentage of planned expenditure, indicating the percent of budget that has been spent to date.</description>
    <formula>ampi__Actual_Expenditure__c / ampi__Planned_Expenditure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula field to track the actual expenditure as a percentage of planned expenditure which provides information about the percent of budget that has been spent</inlineHelpText>
    <label>Percent of Budget Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>