force-app/main/default/objects/ampi__Budget__c/fields/ampi__Planned_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>ampi__Planned_Expenditure__c</fullName>
    <description>This roll-up summary sums the Amount Planned field for all child Financial records where Type is Expenditure, providing the total Planned Expenditure for the entire Budget.</description>
    <inlineHelpText>This roll-up summary sums the Amount Planned field for all child Financial records where Type is Expenditure.</inlineHelpText>
    <label>Planned Expenditure</label>
    <summarizedField>ampi__Financial__c.ampi__Amount_Planned__c</summarizedField>
    <summaryFilterItems>
        <field>ampi__Financial__c.ampi__Type__c</field>
        <operation>equals</operation>
        <value>Expenditure</value>
    </summaryFilterItems>
    <summaryForeignKey>ampi__Financial__c.ampi__Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>