force-app/main/default/objects/ampi__Budget__c/fields/ampi__Planned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>ampi__Planned_Revenue__c</fullName>
    <description>This roll-up summary field sums the Amount Planned value for all child Financial records where Type is Revenue, providing the total Planned Revenue for the entire Budget.</description>
    <inlineHelpText>This roll-up summary field sums the Amount Planned value for all child Financial records where Type is Revenue.</inlineHelpText>
    <label>Planned Revenue</label>
    <summarizedField>ampi__Financial__c.ampi__Amount_Planned__c</summarizedField>
    <summaryFilterItems>
        <field>ampi__Financial__c.ampi__Type__c</field>
        <operation>equals</operation>
        <value>Revenue</value>
    </summaryFilterItems>
    <summaryForeignKey>ampi__Financial__c.ampi__Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>