force-app/main/default/objects/ampi__Budget__c/fields/ampi__Remaining_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>ampi__Remaining_Expenditure__c</fullName>
    <description>This is a formula field to calculate the difference between the planned and actual expenditure, indicating how much of the planned expenditure is remaining to date.</description>
    <formula>ampi__Planned_Expenditure__c - ampi__Actual_Expenditure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula field to calculate the difference between the planned and actual expenditure</inlineHelpText>
    <label>Remaining Expenditure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>