force-app/main/default/objects/ampi__Budget__c/fields/ampi__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Start_Date__c</fullName>
    <description>Date field to specify and track the start date of a budget.</description>
    <inlineHelpText>Indicate the start date here</inlineHelpText>
    <label>Start date</label>
    <type>Date</type>
</CustomField>