force-app/main/default/objects/ampi__Budget__c/fields/ampi__xx_Framework__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field refers to the parent framework.</description>
    <label>Framework</label>
    <referenceTo>ampi__xx_Framework__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>