force-app/main/default/objects/ampi__Budget__c/fields/Order_Financial__c.field-meta.xml
<CustomField>
    <fullName>Order_Financial__c</fullName>
    <label>Order Financial</label>
    <length>4</length>
    <type>Text</type>
</CustomField>