force-app/main/default/objects/ampi__Budget__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>NAME</columns>
    <columns>Unique_Name__c</columns>
    <columns>ampi__Project__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Order_Project__c</columns>
    <columns>Order_Financial__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Project__c</field>
        <operation>equals</operation>
        <value>Cape Verde IF4C</value>
    </filters>
    <label>All</label>
</ListView>